# cash-register-qt

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc
ui/: LoginView.qml  MainView.qml  pagecontroller.cpp  pagecontroller.h
ui/commponents/: RecipeView.qml  TopBar.qml
ui/commponents/Forms/: formcontroller.cpp  formcontroller.h
ui/commponents/LogInDialog/: LogInDialog.qml
ui/commponents/TopBar/: TopBarButton.qml  TopBarSpliter.qml  TopBarUser.qml
ui/commponents/common/controls/: VkTextField.qml
ui/commponents/common/keyboard/: FullKeyBoard.qml  KeyboardButton.qml  NumericKeyboard.qml  virtualkeyboardcontroller.cpp  virtualkeyboardcontroller.h
